@@ -3,6 +3,9 @@ update-manager (1:0.93.33) intrepid; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - add detection for cards no longer supported via fglrx 
       and ensure transition to "ati" (LP: #284408) 
+  * DistUpgrade/DistUpgradeCache.py:
+    - check if the package is actually downloadable in the 
+      removal blacklist checking (LP: #293486)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 29 Oct 2008 20:56:20 +0100
 
